Our Health update 18_04_2021

--- a/app/src/main/res/layout/activity_health_care_proveider.xml
+++ b/app/src/main/res/layout/activity_health_care_proveider.xml
@@ -175,7 +175,8 @@
             android:layout_margin="8dp"
             app:cardCornerRadius="8dp"
             app:cardElevation="8dp"
-            app:cardBackgroundColor="@color/white">
+            app:cardBackgroundColor="@color/white"
+            android:onClick="Patients">
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -211,7 +212,8 @@
             android:layout_margin="8dp"
             app:cardCornerRadius="8dp"
             app:cardElevation="8dp"
-            app:cardBackgroundColor="@color/white">
+            app:cardBackgroundColor="@color/white"
+            android:onClick="Practice_areas">
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -247,7 +249,8 @@
             android:layout_margin="8dp"
             app:cardCornerRadius="8dp"
             app:cardElevation="8dp"
-            app:cardBackgroundColor="@color/white">
+            app:cardBackgroundColor="@color/white"
+            android:onClick="DoctorSuccessStories">
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -283,7 +286,8 @@
             android:layout_margin="8dp"
             app:cardCornerRadius="8dp"
             app:cardElevation="8dp"
-            app:cardBackgroundColor="@color/white">
+            app:cardBackgroundColor="@color/white"
+            android:onClick="Contuct_Us">
 
             <LinearLayout
                 android:layout_width="wrap_content"
