--- a/app/src/main/res/layout/activity_general_.xml
+++ b/app/src/main/res/layout/activity_general_.xml
@@ -273,15 +273,15 @@
             android:layout_margin="8dp"
             app:cardCornerRadius="8dp"
             app:cardElevation="8dp"
-            app:cardBackgroundColor="@color/white">
+            app:cardBackgroundColor="@color/white"
+            android:onClick="Signup">
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:gravity="center"
-                android:layout_gravity="center_vertical|center_horizontal"
-                android:onClick="Signup">
+                android:layout_gravity="center_vertical|center_horizontal">
 
                 <ImageView
                     android:layout_width="wrap_content"
