--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -13,6 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Are you a Doctor ?"
+        android:textSize="18sp"
+        android:textStyle="bold"
         android:textAllCaps="false"
         android:layout_margin="12dp"
         android:background="@drawable/round_sign_up_button"
@@ -21,6 +23,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Are you a Data analyst ?"
+        android:textSize="18sp"
+        android:textStyle="bold"
         android:textAllCaps="false"
         android:layout_margin="12dp"
         android:background="@drawable/round_sign_up_button"
@@ -29,6 +33,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Are you a Patient ?"
+        android:textSize="18sp"
+        android:textStyle="bold"
         android:textAllCaps="false"
         android:layout_margin="12dp"
         android:background="@drawable/round_sign_up_button"
