--- a/app/src/main/res/layout/activity_timeline__patient.xml
+++ b/app/src/main/res/layout/activity_timeline__patient.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Treatments"
+    tools:context=".Timeline_Patient"
     android:orientation="vertical"
     android:gravity="top"
     android:background="@drawable/background_blue">
@@ -26,13 +26,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:text="Treatments"
+            android:text="Mr. Rofiq's\n Recent Health Status"
+            android:textAlignment="center"
             android:textSize="24sp"
             android:textColor="@color/white"
             android:fontFamily="serif"
-            android:textStyle="bold"/>
+            android:textStyle="bold"
+            android:gravity="center_horizontal" />
 
     </LinearLayout>
+
 
     <ScrollView
         android:layout_width="match_parent"
@@ -43,10 +46,50 @@
             android:orientation="vertical"
             android:gravity="top">
 
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:hint="Write your post here..."
+                android:textColorHint="@color/gray"
+                android:textColor="@color/black"
+                android:background="@drawable/write_post"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="right">
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="30dp"
+                    android:text="Voice to Text"
+                    android:fontFamily="serif"
+                    android:textAllCaps="false"
+                    android:layout_margin="8dp"
+                    android:background="@drawable/round_login_button"/>
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="30dp"
+                    android:text="Post"
+                    android:fontFamily="serif"
+                    android:textAllCaps="false"
+                    android:layout_margin="8dp"
+                    android:background="@drawable/round_sign_up_button"/>
+            </LinearLayout>
+
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="500px"
-                android:src="@drawable/stat_bar_02"/>
+                android:src="@drawable/stat_bar"/>
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="700px"
+                android:src="@drawable/treat_post_01" />
 
             <ImageView
                 android:layout_width="match_parent"
@@ -55,21 +98,14 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="700px"
-                android:src="@drawable/treat_post_02"/><ImageView
-            android:layout_width="match_parent"
-            android:layout_height="700px"
-            android:src="@drawable/treat_post_01"/>
+                android:src="@drawable/treat_post_01"/>
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="700px"
-                android:src="@drawable/treat_post_02"/><ImageView
-            android:layout_width="match_parent"
-            android:layout_height="700px"
-            android:src="@drawable/treat_post_01"/>
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="700px"
-                android:src="@drawable/treat_post_02"/>
+                android:src="@drawable/treat_post_01"/>
+
+
+
 
 
         </LinearLayout>
