--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -36,7 +36,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="01789564575"
+        android:text="01*********"
         android:textColor="@color/black"
         android:textSize="8pt"
         android:textAlignment="center"
