--- a/app/src/main/res/layout/activity_data__analyst__panel.xml
+++ b/app/src/main/res/layout/activity_data__analyst__panel.xml
@@ -53,7 +53,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Name"
+                    android:text="Dr. Sajib"
                     android:textColor="@color/white"
                     android:textAlignment="center"
                     android:gravity="center_horizontal" />
@@ -98,13 +98,39 @@
             android:layout_height="80dp"
             android:layout_margin="20dp"
             android:background="@drawable/histogram_btn"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:onClick="Histogram"/>
         <Button
             android:layout_width="match_parent"
             android:layout_height="80dp"
             android:layout_margin="20dp"
             android:background="@drawable/pie_chart_btn"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:onClick="PieChart"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:gravity="center">
+
+        <ImageView
+            android:id="@+id/Histogram_Img"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:src="@drawable/histogram_img"
+            android:layout_margin="12pt"
+            android:visibility="visible"/>
+
+        <ImageView
+            android:id="@+id/Pie_Img"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:src="@drawable/pie_chart_img"
+            android:layout_margin="8pt"
+            android:visibility="gone"/>
 
     </LinearLayout>
 
