--- a/app/src/main/res/layout/activity_doctor_success_stories.xml
+++ b/app/src/main/res/layout/activity_doctor_success_stories.xml
@@ -51,23 +51,34 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
+        android:layout_height="wrap_content">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:gravity="top">
 
-            <TextView
+            <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="50dp"
-                android:text="@string/doctor_success_stories"
-                android:textColor="@color/black"
-                android:textSize="8pt" />
+                android:layout_height="500px"
+                android:src="@drawable/success_story"/>
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="500px"
+                android:src="@drawable/success_story_02"/>
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="500px"
+                android:src="@drawable/success_story"/>
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="500px"
+                android:src="@drawable/success_story_02"/>
+
+
+
 
         </LinearLayout>
-
-
     </ScrollView>
 
 </LinearLayout>
