--- a/app/src/main/res/layout/activity_general_.xml
+++ b/app/src/main/res/layout/activity_general_.xml
@@ -108,7 +108,8 @@
                     android:text="Timeline"
                     android:textStyle="bold"
                     android:textAlignment="center"
-                    android:textColor="@color/teal_200"
+                    android:textColor="@color/black"
+                    android:textSize="8pt"
                     android:gravity="center_horizontal" />
 
             </LinearLayout>
@@ -143,7 +144,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Conditions"
-                    android:textColor="@color/teal_200"
+                    android:textColor="@color/black"
+                    android:textSize="8pt"
                     android:textStyle="bold"
                     android:textAlignment="center"
                     android:gravity="center_horizontal" />
@@ -180,7 +182,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Treatments"
-                    android:textColor="@color/teal_200"
+                    android:textColor="@color/black"
+                    android:textSize="8pt"
                     android:textStyle="bold"
                     android:textAlignment="center"
                     android:gravity="center_horizontal" />
@@ -217,7 +220,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Symptoms"
-                    android:textColor="@color/teal_200"
+                    android:textColor="@color/black"
+                    android:textSize="8pt"
                     android:textStyle="bold"
                     android:textAlignment="center"
                     android:gravity="center_horizontal" />
@@ -254,7 +258,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="About"
-                    android:textColor="@color/teal_200"
+                    android:textColor="@color/black"
+                    android:textSize="8pt"
                     android:textStyle="bold"
                     android:textAlignment="center"
                     android:gravity="center_horizontal" />
@@ -291,7 +296,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Sign Up"
-                    android:textColor="@color/teal_200"
+                    android:textColor="@color/black"
+                    android:textSize="8pt"
                     android:textStyle="bold"
                     android:textAlignment="center"
                     android:gravity="center_horizontal" />
