--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -69,6 +69,8 @@
             android:layout_marginTop="30dp"
             android:background="@drawable/round_login_button"
             android:text="Sign in"
+            android:textSize="18sp"
+            android:textStyle="bold"
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:onClick="Sign_in"/>
@@ -81,6 +83,8 @@
             android:layout_marginTop="30dp"
             android:background="@drawable/round_sign_up_button"
             android:text="Sign Up"
+            android:textSize="18sp"
+            android:textStyle="bold"
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:onClick="SignUp"/>
