--- a/app/src/main/res/layout/activity_practice__area.xml
+++ b/app/src/main/res/layout/activity_practice__area.xml
@@ -45,7 +45,8 @@
             android:textSize="24sp"
             android:textColor="@color/white"
             android:fontFamily="serif"
-            android:textStyle="bold"/>
+            android:textStyle="bold"
+            android:layout_marginTop="50dp"/>
 
         <EditText
             android:layout_marginTop="50dp"
