--- a/app/src/main/res/layout/activity_registration__common__info.xml
+++ b/app/src/main/res/layout/activity_registration__common__info.xml
@@ -4,16 +4,45 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RegisterAsDoctor"
+    tools:context=".Registration_Common_Info"
     android:orientation="vertical"
     android:gravity="center"
     android:background="@drawable/background">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center">
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:hint="First Name: "
+            android:textColor="@color/black"
+            android:textColorHint="@color/gray"
+            android:layout_margin="12dp"
+            android:padding="8dp"
+            android:layout_weight="1"/>
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:hint="Last Name: "
+            android:textColor="@color/black"
+            android:textColorHint="@color/gray"
+            android:layout_margin="12dp"
+            android:padding="8dp"
+            android:layout_weight="1"/>
+
+    </LinearLayout>
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
-        android:hint="Name: "
+        android:hint="Date of birth: "
         android:textColor="@color/black"
         android:textColorHint="@color/gray"
         android:layout_margin="12dp"
@@ -22,7 +51,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
-        android:hint="NID / SSN Number: "
+        android:hint="Address: "
         android:textColor="@color/black"
         android:textColorHint="@color/gray"
         android:layout_margin="12dp"
@@ -31,7 +60,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
-        android:hint="Doctor's ID No: "
+        android:hint="Contact no: "
+        android:textColor="@color/black"
+        android:textColorHint="@color/gray"
+        android:layout_margin="12dp"
+        android:padding="8dp" />
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:hint="Email: "
         android:textColor="@color/black"
         android:textColorHint="@color/gray"
         android:layout_margin="12dp"
@@ -46,5 +84,7 @@
         android:textStyle="bold"
         android:textAllCaps="false"
         android:layout_margin="12dp"
-        android:onClick="RegisterAsDoctorSubmit"/>
+        android:onClick="RegisterComInfo"/>
+
+
 </LinearLayout>
